header z-index(redirect) issue resolved,letter spacing and header opacity corrected

--- a/wp-content/themes/practice theme/css/practice.css
+++ b/wp-content/themes/practice theme/css/practice.css
@@ -8,19 +8,22 @@
 }
 .navbar-header{
     position:absolute;
+    z-index: 2;
     left:50%;
 }
 .navbar-brand {
     font-family: 'Nautilus Pompilius';
     font-weight: bold;
-    font-style: italic;
     font-size: 28px;
 }
 .navbar-nav{
+    z-index: 2;
+    position: absolute;
     font-family: 'Myriad Pro';
     font-weight: normal;
     font-style: normal;
     font-size: 16px;
+    letter-spacing: 0.125rem;
 }
 .navbar-default {
     background-color: transparent;
@@ -40,7 +43,7 @@
     height: 650px;
 }
 .col-head-image{
-    z-index: -1;
+    /*z-index: -1;*/
 }
 .col-head-image{
     position: relative;
@@ -104,6 +107,8 @@
     font-weight: 400;
     font-size:22px;
     padding-bottom:20px;
+    opacity: 0.8;
+    letter-spacing: 0.125rem;
 }
 .what-we-do-main:after{
     content:' ';
@@ -112,6 +117,7 @@
     width:44px;
     position: absolute;
     left:49%;
+    opacity: 0.8;
 }
 .what-we-do-detail{
     text-align: center;
@@ -119,6 +125,7 @@
     font-weight: 300;
     font-size:16px;
     font-style: normal;
+    letter-spacing: 0.0625rem;
 }
 .what-we-do-top{
     margin-top:25px;
@@ -127,6 +134,7 @@
    margin-top:160px;
    margin-left:0px !important;
     margin-right:0px !important;
+    margin-bottom: 25px;
 }
 
 .src-image{
@@ -143,12 +151,20 @@
     font-weight: 400;
     margin:20px 0;
     font-size:20px;
+    opacity: 0.8;
+    letter-spacing: 0.125rem;
 }
 .div-image-detail{
     font-size:15px;
     font-weight: 300;
+    opacity: 0.8;
+    letter-spacing: 0.0625rem;
+}
+.div-learn-more{
+    letter-spacing: 1px;
 }
 .btn-sm{
+    font-weight: 600;
     margin-top:15px;
     padding:8px 20px;
     border-radius: 18px;
@@ -174,6 +190,8 @@
     font-size:22px;
     padding-top: 20px;
     padding-bottom: 20px;
+    opacity: 0.8;
+    letter-spacing:0.125rem;
 }
 .our-happy-client-main:after{
     content:' ';
@@ -188,6 +206,8 @@
     font-weight: 400;
     font-size:16px;
     padding-bottom:2px;
+    opacity: 0.8;
+    letter-spacing: 1px;
 }
 .our-happy-client-inside{
      padding:10px;
@@ -237,11 +257,13 @@
     font-weight: 400;
     padding-bottom:5px;
     color:#000;
+    opacity: 0.8;
 }
 .section-subhead{
     margin-top: 10px;
     font-size:16px;
     color:#000;
+    opacity: 0.8;
 }
 .profile-container{
     padding-top:40px;
@@ -256,6 +278,7 @@
     width:2px;
     height:50px;
     background-color:#000;
+    opacity: 0.8;
 }
 .person-name{
     margin:5px;
@@ -318,6 +341,7 @@
     font-weight: 400;
     font-size:22px;
     padding-bottom:20px;
+    opacity: 0.8;
 }
 .latest-work-header:after{
     content:' ';
@@ -326,11 +350,13 @@
     width:44px;
     position: absolute;
     left:48%;
+    opacity: 0.8;
 }
 .latest-work-detail{
     font-family: 'Montserrat';
     font-weight: 400;
     font-size:16px;
+    opacity: 0.8;
 }
 .tab-content{
     margin-top:20px;
@@ -409,10 +435,9 @@
 .media-category{
     margin-top:-5px;
     color: whitesmoke;
-    /*background-color: red;*/
-    max-width: 90px;
+    max-width: 120px;
     border-radius: 5px;
-    padding-left: 20px;
+    text-align: center;
 }
 ul {
     list-style-type: none;
@@ -530,6 +555,7 @@ textarea {
     width:50px;
     position: absolute;
     left:48%;
+    opacity: 0.8;
 }
 /*.current_page_item:after{*/
     /*content:' ';*/
@@ -559,10 +585,12 @@ textarea {
     width:44px;
     position: absolute;
     left:48%;
+    opacity: 0.8;
 }
 .testimonials-heading-title{
     font-size:22px;
     font-weight:300;
+    opacity: 0.8;
     /*font-family:"Montserrat Light";*/
 }
 
@@ -577,7 +605,7 @@ textarea {
 }
 .carousel-caption{
     color:#000;
-    max-width:500px;
+    max-width:600px;
     left: 28%;
     top: 20%;
     text-align: center;
@@ -586,11 +614,14 @@ textarea {
 .carousel-caption p{
     font-family:"Montserrat";
     font-size:16px;
+    opacity: 0.7;
+    letter-spacing: 1px;
 }
 .carousel-caption h3{
     font-family:"Montserrat";
     font-size:18px;
     font-weight: 700;
+    opacity: 0.7;
 }
 .carousel-caption h2{
     font-family:"Montserrat";
@@ -615,7 +646,7 @@ textarea {
 }
 .testi-content{
     position: absolute;
-    left:35%;
+    left:30%;
 }
 .as-seen-on-logo img{
     filter: grayscale(100%);
@@ -625,6 +656,7 @@ textarea {
     width: 60px;
     position: absolute;
     left: 48%;
+    opacity:0.8;
 }
 .widget{
     position:relative;
@@ -638,6 +670,7 @@ textarea {
     position:absolute;
     left:45%;
     margin-top:2px;
+    opacity: 0.8;
 }
 /*
     * ===================================================================
